# postnl-ecommerce-sdk-python

./: README.md  pyproject.toml  requirements.txt
doc/: client.md
doc/auth/: custom-header-signature.md
doc/controllers/: barcode.md  checkout.md  confirming.md  deliverydate.md  labelling.md  locations.md  postalcodecheck.md  shipment.md  shipping-status.md  timeframes.md
doc/models/: address-1.md  address-11.md  address-2.md  address-3.md  address-4.md  address-type-enum.md  address.md  amount-1.md  amount.md  barcode-error.md  barcode-method-not-allowed-exception.md  barcode-response-error-exception.md  barcode-response-invalid-exception.md  barcode-response.md  barcode-too-many-request-exception.md  checkout-address.md  checkout-cut-off-day-enum.md  checkout-cut-off-time.md  checkout-cut-off-type-enum.md  checkout-delivery-option.md  checkout-location.md  checkout-option-enum.md  checkout-pickup-address.md  checkout-pickup-option.md  checkout-request.md  checkout-response-invalid-exception.md  checkout-response.md  checkout-time-frame.md  checkout-warning-option-enum.md  checkout-warning.md  code-enum.md  complete-status-shipment.md  complete-status.md  confirming-custom-content.md  confirming-custom.md  confirming-error.md  confirming-message.md  confirming-request.md  confirming-response-error-1-exception.md  confirming-response-error-exception.md  (+165 more)
postnlecommerce/: __init__.py  api_helper.py  configuration.py  postnlecommerce_client.py
postnlecommerce/controllers/: __init__.py  barcode_controller.py  base_controller.py  (+9 more)
tests/: http_response_catcher.py
(+227 files in other folders)
